# IRIS-FINALPROJECT

devel/: .catkin
devel/include/finalpro/: data.h  messagetomotor.h  posmesin.h
devel/lib/finalpro/: kamera  motor  pc
devel/lib/pkgconfig/: finalpro.pc
devel/lib/python3/dist-packages/finalpro/msg/: __init__.py  _data.py  _messagetomotor.py  _posmesin.py
devel/share/common-lisp/ros/finalpro/msg/: _package.lisp  _package_data.lisp  _package_messagetomotor.lisp  _package_posmesin.lisp  data.lisp  finalpro-msg.asd  messagetomotor.lisp  posmesin.lisp
devel/share/finalpro/cmake/: finalpro-msg-paths.cmake  finalproConfig.cmake
devel/share/gennodejs/ros/finalpro/msg/: _index.js  data.js  messagetomotor.js  posmesin.js
devel/share/roseus/ros/finalpro/: manifest.l
devel/share/roseus/ros/finalpro/msg/: data.l  messagetomotor.l  posmesin.l
src/finalpro/: CMakeLists.txt
src/finalpro/launch/: runner.launch
src/finalpro/msg/: data.msg  messagetomotor.msg  posmesin.msg
src/finalpro/src/: app  gui  gui.cpp  kamera.cpp  motor.cpp  pc.cpp
src/finalpro/src/msg/: data.msg  posmesin.msg
